# vrep-example

./: .gitignore  1x1.ttt  CMakeLists.txt  Cenario.ttt  LICENSE  README.md
include/: extApiCustomConst.h  v_repConst.h  v_repLib.h  v_repTypes.h
remoteApi/: extApi.c  extApi.h  extApiCustom.c  extApiCustom.h  extApiInternal.h  extApiPlatform.c  extApiPlatform.h
src/: makefile  robot_control.cpp  simulacao.cpp  simulation_1x1.cpp
src/libs/: robot_agent.cpp  robot_agent.hpp  simulation_group.cpp  simulation_group.hpp
src/tests/: test_robotagent.cpp  test_simulation_group.cpp
